Closed Bug 34167 Opened 24 years ago Closed 24 years ago

Message display is horked

Categories

(MailNews Core :: Backend, defect, P3)

x86
Windows NT
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: mscott, Assigned: travis)

Details

(Keywords: regression, smoketest)

Hey Travis, this is just a place holder bug to track the problem I just sent to
the hook. Your load Url changes caused these problems. I'll just paste in my
comments from the hook:

I have a tree pulled right after the tree re-closed this afternoon. When I try
to display mail messages the display in the message pane is horked up.

Travis, I don't think you regression tested your changes to webshell and
docshell for changing how we load urls against mailnews. Shame on you =).

After your changes, we are ignoring the nsIURI passed into LoadUri. You are then
getting the spec for this url and then creating another nsIURI for that spec.
Then you load that url in the docshell. Unfortunately, we are hanging lots of
mailnews event sinks, status feedback objects and other things off mailnews
urls. When you create a new url we lose all of this information. 

In the old LoadUrl code, if you pass in a nsIURI, that's the nsIURI we load. We
don't convert it to a string and then convert it back to another new nsIURI =). 

Here's a stack trace that shows the code path where an extra nsIURI gets
created. Can you take a look at this?
nsImapService::NewURI(nsImapService * const 0x036635a8, const char * 0x04d12060,
nsIURI * 0x00000000, nsIURI * * 0x0012dd64) line 2550
nsIOService::NewURI(const char * 0x04d12060, nsIURI * 0x00000000, nsIURI * *
0x0012dd64, nsIProtocolHandler * * 0x00000000) line 209 + 35 bytes
nsIOService::NewURI(nsIOService * const 0x01808340, const char * 0x04d12060,
nsIURI * 0x00000000, nsIURI * * 0x0012dd64) line 371
NS_NewURI(nsIURI * * 0x0012dd64, const char * 0x04d12060, nsIURI * 0x00000000,
nsIIOService * 0x00000000) line 58 + 24 bytes
NS_NewURI(nsIURI * * 0x0012dd64, const nsString &
{"imap://mscott@dredd:143/fetch%3EUID%3E/INBOX%3E66079"}, nsIURI * 0x00000000,
nsIIOService * 0x00000000) line 75 + 21 bytes
nsWebShell::LoadURL(nsWebShell * const 0x04ccde50, const unsigned short *
0x0012ddf0, const char * 0x00394678, nsIInputStream * 0x00000000, int 1,
unsigned int 0, const unsigned int 0, nsISupports * 0x00000000, const unsigned
short * 0x0012de88, const char * 0x00000000) line 1582 + 43 bytes
nsWebShell::LoadURL(nsWebShell * const 0x04ccde50, const unsigned short *
0x0012ddf0, nsIInputStream * 0x00000000, int 1, unsigned int 0, const unsigned
int 0, nsISupports * 0x00000000, const unsigned short * 0x0012de88) line 988
nsWebShell::InternalLoad(nsWebShell * const 0x04ccde50, nsIURI * 0x04d00394,
nsIURI * 0x00000000, nsIInputStream * 0x00000000, nsDocShell::loadType
loadNormal) line 1331 + 93 bytes
nsDocShell::LoadURI(nsDocShell * const 0x04ccde50, nsIURI * 0x04d00394,
nsIDocShellLoadInfo * 0x00000000) line 214 + 40 bytes
nsImapService::FetchMessage(nsImapService * const 0x036635a0, nsIImapUrl *
0x04d00390, int 268435480, nsIMsgFolder * 0x028e032c, nsIImapMessageSink *
0x028e03c8, nsIURI * * 0x00000000, nsISupports * 0x04ccdf44, const char *
0x04d00770, int 1) line 775 + 43 bytes
Keywords: smoketest
Keywords: dogfood, regression
Fixed.
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Linux (2000-04-18-08 M16)
Win32 (2000-04-17-09 M16)
mac (2000-04-17-19 M16)
This problem has been fixed. I don't see this problem in these builds.
Status: RESOLVED → VERIFIED
QA Contact: lchiang → fenella
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.