Removed the unused mViewSource member.  Fixed ::InternalLoad to call ::LoadURI instead of LoadURL since destroying and then re-creating the uri is pointless when it's passed in for us.  Not to mention if the person calling this load had actually setup listeners on this uri then this information would be lost (which is actually causing bug 34167).